# heron

./: .gitignore  CHANGELOG.rst  CMakeLists.txt  README  README.md  package.xml  stack.xml
app/: android_teleop.app  android_teleop.launch
heron_control/: CHANGELOG.rst  CMakeLists.txt  package.xml
heron_control/config/: empty.yaml  navsat_config.yaml  robot_localization.yaml
heron_control/launch/: control.launch  teleop.launch
heron_control/scripts/: vel_cov.py
heron_description/: CHANGELOG.rst  CMakeLists.txt  package.xml
heron_description/launch/: description.launch
heron_description/meshes/: left_panel.stl  plain-rear-plate.stl  right_panel.stl
heron_description/urdf/: accessories.urdf.xacro  actuators.xacro  base.urdf.xacro  base.xacro  empty.urdf  gazebo.xacro  heron.gazebo  heron.urdf.xacro  materials.urdf.xacro  parts.urdf.xacro  sensors.xacro  snippets.xacro  standard.urdf.xacro
heron_description/urdf/accessories/: axis_ptz.urdf.xacro  novatel_smart6.urdf.xacro  sick_lms1xx.urdf.xacro  sick_lms1xx_mount.urdf.xacro
heron_description/urdf/configs/: base
heron_msgs/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
heron_msgs/msg/: Course.msg  Drive.msg  Helm.msg  Sense.msg  Status.msg
kingfisher_description/: CHANGELOG.rst  CMakeLists.txt  manifest.xml  package.xml
kingfisher_description/launch/: description.launch
kingfisher_description/urdf/: base.urdf.xacro  kingfisher_base.urdf.xacro  parts.urdf.xacro  standard.urdf.xacro  standard_with_sonar.urdf.xacro
kingfisher_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
kingfisher_msgs/msg/: Power.msg
kingfisher_teleop/: CHANGELOG.rst  CMakeLists.txt  README.md  joystick_teleop.launch  mainpage.dox  manifest.xml  package.xml  ps3_teleop.launch
kingfisher_teleop/app/: android_teleop.launch
kingfisher_teleop/launch/: joystick_teleop.launch  ps3_teleop.launch
kingfisher_teleop/nodes/: joystick_teleop
kingfisher_teleop/src/: joystick_teleop.py
msg/: Drive.msg  Helm.msg  Sense.msg  YawSpd.msg
urdf/: kingfisher_with_sensors.xacro
