<?xml version="1.0"?>
<package format="2">
  <name>heron_control</name>
  <version>0.3.4</version>
  <description>Control package for Heron</description>

  <maintainer email="mpurvis@clearpathrobotics.com">Mike Purvis</maintainer>
  <author email="yanma@clearpathrobotics.com">Yan Ma</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>robot_localization</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>python-numpy</exec_depend>

  <test_depend>roslaunch</test_depend>

</package>
