<?xml version="1.0"?>
<package format="2">
  <name>heron_description</name>
  <version>0.3.4</version>
  <description>URDF description for Heron</description>

  <maintainer email="mpurvis@clearpathrobotics.com">Mike Purvis</maintainer>
  <author email="yanma@clearpathrobotics.com">Yan Ma</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roslaunch</build_depend>
  <exec_depend>lms1xx</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
  </export>
</package>
