<?xml version="1.0"?>
<package format="2">
  <name>heron_msgs</name>
  <version>0.3.4</version>
  <description>
    Provides standard messages specific to Heron, especially for 
    the microcontroller's rosserial interface.
  </description>
  <maintainer email="mpurvis@clearpathrobotics.com">Mike Purvis</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
  </export>
</package>
