<?xml version="1.0"?>
<package>
  <name>kingfisher_msgs</name>
  <version>0.0.2</version>
  <description>
    Provides standard messages specific to Kingfisher, especially for 
    the microcontroller's rosserial interface.
  </description>
  <maintainer email="mpurvis@clearpathrobotics.com">Mike Purvis</maintainer>
  <license>BSD</license>

  <build_depend>message_generation</build_depend>
  <buildtool_depend>catkin</buildtool_depend>
</package>
