<?xml version="1.0"?>
<package>
  <name>kingfisher_teleop</name>
  <version>0.0.3</version>
  <description>The kingfisher_teleop package</description>

  <maintainer email="mpurvis@clearpathrobotics.com">Mike Purvis</maintainer>
  <author email="rgariepy@clearpathrobotics.com">Ryan Gariepy</author> 
  <license>BSD</license>

  <url type="website">http://ros.org/wiki/kingfisher_teleop</url>
  
  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>rospy</run_depend>
  <run_depend>joy</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>kingfisher_msgs</run_depend>
  <run_depend>topic_tools</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>tf</run_depend>

  <export>
  </export>
</package>
